# Mooncake

./: .gitignore  dependencies.sh
mooncake-common/etcd/: etcd_wrapper.go
mooncake-store/benchmarks/: CLIENT_MODE_BENCH_GUIDE.md  CMakeLists.txt  client_mode_bench.cpp  client_mode_bench.py  run_client_mode_bench.sh
mooncake-store/conf/: client.json  master.yaml
mooncake-store/include/: etcd_helper.h  etcd_oplog_change_notifier.h  etcd_oplog_store.h  etcd_snapshot_provider.h  ha_helper.h  ha_metric_manager.h  hot_standby_service.h  localfs_oplog_store.h  master_client.h  master_config.h  master_service.h  metadata_store.h  oplog_applier.h  oplog_change_notifier.h  oplog_manager.h  oplog_replicator.h  oplog_store.h  oplog_store_factory.h  oplog_watcher.h  polling_oplog_change_notifier.h  replica.h  rpc_service.h  serializer_snapshot_provider.h  snapshot_provider.h  standby_state_machine.h  types.h
mooncake-store/src/: CMakeLists.txt  client_service.cpp  etcd_helper.cpp  etcd_oplog_change_notifier.cpp  etcd_oplog_store.cpp  etcd_snapshot_provider.cpp  ha_helper.cpp  ha_metric_manager.cpp  hot_standby_service.cpp  localfs_oplog_store.cpp  master.cpp  master_service.cpp  mock_client_main.cpp  oplog_applier.cpp  oplog_manager.cpp  oplog_store_factory.cpp  oplog_watcher.cpp  polling_oplog_change_notifier.cpp  real_client.cpp  real_client_main.cpp  rpc_service.cpp  segment.cpp  serializer_snapshot_provider.cpp  snapshot_uploader_daemon.cpp  standby_state_machine.cpp  types.cpp
mooncake-store/tests/: CMakeLists.txt  health_check_test.cpp  (+9 more)
scripts/: local_build.sh
(+31 files in other folders)
